--- a/slide2.html
+++ b/slide2.html
@@ -209,7 +209,7 @@
             </div>
         </div>
         <div class="nav-footer">
-            <a href="slide1.html" class="nav-btn"><i class="fas fa-arrow-left"></i></a>
+            <a href="index.html" class="nav-btn"><i class="fas fa-arrow-left"></i></a>
             <a href="slide3.html" class="nav-btn"><i class="fas fa-arrow-right"></i></a>
         </div>
     </div>
