--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </p>
             <p class="flex items-center">
               <i class="fas fa-bullseye w-6 text-blue-500"></i>
-              <span>Público-alvo: comunidade em geral</span>
+              <span><strong>Público-alvo:</strong> comunidade em geral</span>
             </p>
             <p class="flex items-center">
               <i class="fas fa-bullseye w-6 text-blue-500"></i>
