--- a/slide29.html
+++ b/slide29.html
@@ -157,7 +157,7 @@
     </div>
     <div class="nav-footer">
         <a href="slide28.html" class="nav-btn"><i class="fas fa-arrow-left"></i></a>
-        <a href="slide1.html" class="nav-btn"><i class="fas fa-arrow-right"></i>Início</a>
+        <a href="index.html" class="nav-btn"><i class="fas fa-arrow-right"></i>Início</a>
     </div>
 </body>
 
