--- a/slide29.html
+++ b/slide29.html
@@ -109,21 +109,19 @@
         }
         .nav-footer {
             position: fixed;
-            bottom: 20px;
-            right: 20px;
-            /* Fixa no canto direito */
+            bottom: 10px;
+            right: 10px;
             display: flex;
-            gap: 20px;
-            padding: 10px;
+            gap: 5px;
             z-index: 999;
         }
 
         .nav-btn {
-            padding: 10px 18px;
-            background-color: #003366;
+            padding: 5px 10px;
+            background-color: #0033664a;
             color: #ffffff;
             border-radius: 10px;
-            font-weight: 500;
+            font-weight: 100;
             transition: 0.2s;
             text-decoration: none;
         }
@@ -157,7 +155,7 @@
     </div>
     <div class="nav-footer">
         <a href="slide28.html" class="nav-btn"><i class="fas fa-arrow-left"></i></a>
-        <a href="index.html" class="nav-btn"><i class="fas fa-arrow-right"></i>Início</a>
+        <a href="index.html" class="nav-btn"><i class="fas fa-arrow-right"></i></a>
     </div>
 </body>
 
