--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
       <div class="left-panel">
         <!-- Cabeçalho Institucional -->
         <div class="flex items-center mb-8 text-blue-900">
-          <i class="fas fa-shopping-cart text-3xl mr-3"></i>
-          <p class="text-lg font-bold tracking-widest uppercase">Segurança DiGITAL</p>
-          <p></p>
+          <p>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Instituto_Federal_do_Cear%C3%A1%2C_Campus_Iguatu_-_Marca_Horizontal_2015.svg/1024px-Instituto_Federal_do_Cear%C3%A1%2C_Campus_Iguatu_-_Marca_Horizontal_2015.svg.png" alt="" width="300px">
+          </p>
         </div>
         <!-- Título Principal -->
         <div class="title-accent"></div>
@@ -149,16 +149,8 @@
               <i class="fas fa-file-alt w-6 text-blue-500"></i>
               <span>Baseado no fascículo oficial do <strong>CERT.br</strong></span>
             </p>
+            <p></p>
             <p class="flex items-center">
-              <i class="fas fa-bullseye w-6 text-blue-500"></i>
-              <span><strong>Público-alvo:</strong> comunidade em geral</span>
-            </p>
-            <p class="flex items-center">
-              <i class="fas fa-bullseye w-6 text-blue-500"></i>
-              <span><strong>Instituição:</strong> IFCE - Campus Iguatu</span>
-            </p>
-            <p class="flex items-center">
-              <i class="fas fa-bullseye w-6 text-blue-500"></i>
               <span><strong>Apresentador:</strong> Paulo Ricardson S. Costa</span>
             </p>
           </div>
